--- a/projects/storefrontlib/src/cms-components/product/product-images/product-images.component.html
+++ b/projects/storefrontlib/src/cms-components/product/product-images/product-images.component.html
@@ -1,17 +1,9 @@
 <ng-container *ngIf="mainImage$ | async as main">
-  <lib-ngx-image-zoom
-    [thumbImage]="myThumbnail"
-    [fullImage]="myFullresImage"
-    [magnification]="1"
-    [enableScrollZoom]="true"
-    [enableLens]="true"
-    [lensWidth]="200"
-  ></lib-ngx-image-zoom>
-  <!--   <lib-ngx-image-zoom [thumbImage]="main.image.zoom.url" ></lib-ngx-image-zoom> -->
+  <pinch-zoom [backgroundColor]="white">
+    <img [src]="main.zoom.url" />
+  </pinch-zoom>
 </ng-container>
-<!-- <ng-container *ngIf="detailImage">
-  <p [innerHTML]="detailImage"></p>
-</ng-container> -->
+
 <ng-container *ngIf="thumbs$ | async as thumbs">
   <cx-carousel
     *ngIf="thumbs.length"
